--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ body{
 
 }
 
-h1{
+h2{
     font-family: 'Sang bleu-regular';
+    font-weight: 400;
 }
 nav{
     background-color: rgba(255, 255, 255, 0.021);
@@ -51,7 +52,7 @@ nav div {
 nav ul li a {
     text-decoration: none;
     font-family: 'Sang bleu-light';
-    color: #B8BFC6;
+    color: #3F3F3F;
     font-weight: 600;
     padding: 8px 0;
     transition: all;
@@ -65,13 +66,56 @@ nav ul li a:hover{
     border-bottom: 3px solid #12345D;
 }
 
-h2{
+
+/* h1{
     font-weight: normal;
     text-align: center;
     margin-top: 15%;
     font-style: italic;
     font-size: 80px;
     font-family: Sang bleu-light;
+    color: #475363;
     
+} */
+
+section{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    min-width: 100vh;
+    margin-top: 15%;
+}
+
+h1{
+    font-size: 90px;
+    color: #475363;
+    font-family: Sang bleu-regular;
+    font-weight: normal;
+}
+
+p{
+  font-size: 25px;  
+  color: #12345D;
+  font-weight: 600;
+  font-family: Sang bleu-regular;
+}
+
+
+section .animate {
+    transition: 1s;
+}
+
+.sec-1 .animate {
+    transform: translateX(-100%);
+}
+
+.sec-1.show-animate .animate {
+    transform: translateX(0);
+}
+
+.slider .controls {
+      position: absolute;
+      
 }
 
