--- a/style.css
+++ b/style.css
@@ -24,12 +24,12 @@ html, body{
 }
 
 body{
-    background-image: url(./img/fundo/pexels-maycon-marmo-4346016.jpg);
+     background-image: url(./img/fundo/pexels-maycon-marmo-4346016.jpg); 
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    background-position: center center;  
-;
+    background-position: center center;
+      
 
 
 
@@ -165,8 +165,7 @@ section .animate {
     font-size: 40px;
     margin-bottom: 10px;
     margin-top: -30px;
-    font-family: 'M PLUS arredondado 1c', sem serifa;
-   font-weight: lighter;
+
 }
 
 .right-slide {
@@ -248,3 +247,6 @@ img {
     display: block;
     border-radius: .5rem;
 }
+
+/* Card em loop */
+
