--- a/Login/agendamento.css
+++ b/Login/agendamento.css
@@ -1,24 +1,25 @@
-@font-face {
-    font-family: Sang bleu-light;
-    src: url(./Fontes/SangBleu-Sunrise.ttf);
-
-}
 *{
-    padding: 0;
-    margin: 0;
     box-sizing: border-box;
-}
-
-body{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  body{
     background-image: url(../img/fundo/pexels-polina-tankilevitch-3736519.jpg);
+    background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     background-position: center center;
-    height: 100vh;
-}
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-header {
+  
+  header {
     /* position: fixed; */
     width: 100%;
 }
@@ -51,7 +52,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #ffffff00;
     padding: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-weight: bold;
@@ -85,7 +86,7 @@ a{
 .dropdown {
     display: none;
     position: absolute;
-    background-color: #f9f3f323;
+    background-color: #ffffff23;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
@@ -136,81 +137,70 @@ a{
     }
 }
 
-
-
-h2{
-    font-family: 'Sang bleu-regular';
-    font-weight: 400;
-    font-size: 15px;
-    color: #ececec;
-}
-
-
-nav ul li a:hover{
-    color:#475363;
-    border-bottom: 3px solid #12345D;
-}
-
-
-h2{
-	text-align: center;
-	margin-bottom: 5rem;
-	font-size: 4rem;
-}
-
-.all-products{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.product{
-	overflow: hidden;
-	background: #ffffff;
-	color: #21201e;
-	text-align: center;
-	width: 240px;
-	height: 400px;
-	padding: 2rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 1.2rem;
-	margin: 2rem;
-}
-
-.product .product-title, .product .product-price{
-	font-size: 18px;
-}
-
-.product:hover img{
-	scale:  1.1;
-}
-
-.product:hover {
-	box-shadow: 5px 15px 25px #eeeeee;
-}
-
-.product img {
-	height: 200px;
-	margin: 1rem;
-	transition: all 0.3s;
-}
-
-.product a:link, .product a:visited{
-	color: #ececec;
-	display: inline-block;
-	text-decoration: none;
-	background-color: #2c3e50;
-	padding: 1.2rem 3rem;
-	border-radius: 1rem;
-	margin-top: 1rem;
-	font-size: 14px;
-	transition: all 0.2s;
-}
-
-.product a:hover{
-	transform: scale(1.1);
-}
+  .container{
+    background-color: #fafafa;
+    border-radius: 14px;
+    margin: 14px;
+    max-width: 600px;
+    width: 100%;
+    box-sizing: 0 3px 5px rgba(0,0,0, 0.5);
+    overflow: hidden;
+  }
+  
+  .header{
+    background-image: url(../img/fundo/pexels-polina-tankilevitch-3736281.jpg);
+    padding: 24px;
+    text-align: center;
+    color: #FFF;
+  }
+  
+  .form{
+    padding: 18px;
+  }
+  
+  .form-content{
+    margin-bottom: 8px;
+    padding-bottom: 18px;
+    position: relative;
+  }
+  
+  .form-content label{
+    display: inline-block;
+    margin-bottom: 4px;
+  }
+  
+  .form-content input{
+    display: block;
+    width: 100%;
+    border-radius: 8px;
+    padding: 8px;
+    border: 2px solid #dfdfdf;
+  }
+  
+  .form-content a{
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+    visibility: hidden;
+  }
+  
+  .form button{
+    background-color: darkgrey;
+    color: #FFF;
+    width: 100%;
+    border-radius: 14px;
+    padding: 10px;
+    border: 0;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 14px;
+  }
+  
+  .form-content.error input{
+    border-color: #ff3b25;
+  }
+  
+  .form-content.error a{
+    color: #ff3b25;
+    visibility: visible;
+  }
