--- a/Login/agendamento.css
+++ b/Login/agendamento.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: Sang bleu-regular;
+  src: url(./Fontes/SangBleu-Sunrise.ttf);
+}
+
+@font-face {
+  font-family: Sang bleu-light;
+  src: url(./Fontes/SangBleu-Sunrise.ttf);
+}
+
+@import url('https://fonts.googleapis.com/css2? family= Black+Han+Sans & family= M+PLUS+Rounded+1c:wght@100;300;400;500;700; 800;900 & família= Maven+Pro:wght@400;500;600;700;800;900 & família= Poppins & família= Russo+One & família= Ultra & display=swap');
+
+@font-face {
+  font-family: Carrosel-Light;
+  src: url(./Fontes/M_PLUS_Rounded_1c/MPLUSRounded1c-Light.ttf);
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -16,12 +33,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
 
   
   header {
-    /* position: fixed; */
+   position: absolute; 
     width: 100%;
+    top: 0;
+    left: 0;
+    height: 50px;
 }
 
 
@@ -52,11 +73,11 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffffff00;
+    background-color: rgb(255, 255, 255);
     padding: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(214, 205, 205, 0.1);
     font-weight: bold;
-    font-family: Sang bleu-light;
+    font-family: Sang bleu-light;;
 }
 
 .logo {
@@ -79,14 +100,13 @@ a{
 .nav-link {
     text-decoration: none;
     color: #333;
-    font-weight: bold;
 }
 
 /* Estilos para o dropdown */
 .dropdown {
     display: none;
     position: absolute;
-    background-color: #ffffff23;
+    background-color: #f9f3f323;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
@@ -135,6 +155,21 @@ a{
     .nav-item:hover .dropdown {
         display: none; /* Esconde dropdowns no modo mobile */
     }
+}
+
+
+
+h2{
+    font-family: 'Sang bleu-regular';
+    font-weight: 400;
+    font-size: 15px;
+    color: #ececec;
+}
+
+
+nav ul li a:hover{
+    color:#475363;
+    border-bottom: 3px solid #12345D;
 }
 
   .container{
