--- a/Login/style.css
+++ b/Login/style.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: Sang bleu-regular;
+  src: url(.././Fontes/SangBleu-Sunrise.ttf);
+}
+
+@import url('https://fonts.googleapis.com/css2? family= Black+Han+Sans & family= M+PLUS+Rounded+1c:wght@100;300;400;500;700; 800;900 & família= Maven+Pro:wght@400;500;600;700;800;900 & família= Poppins & família= Russo+One & família= Ultra & display=swap');
+
+@font-face {
+  font-family: Carrosel-Light;
+  src: url(./Fontes/M_PLUS_Rounded_1c/MPLUSRounded1c-Light.ttf);
+}
+
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -16,125 +29,129 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
   }
   
   header {
-    /* position: fixed; */
-    width: 100%;
-}
-
-
-li{
-    list-style: none;
-}
-a{
-    color: aliceblue;
-    text-decoration: none;
-}
-
-/* Estilos para o menu hamburguer */
-.hamburguer {
-    display: none; /* Oculta o hamburguer em telas maiores */
-    cursor: pointer;
-}
-
-.bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    margin: 5px 0;
-}
-
-/* Estilos para o menu de navegação */
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #ffffff00;
-    padding: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    font-weight: bold;
-    font-family: Sang bleu-light;
-}
-
-.logo {
-    font-size: 24px;
-    text-decoration: none;
-    color: #333;
-}
-
-.nav-menu {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-
-.nav-item {
-    margin-right: 20px;
-}
-
-.nav-link {
-    text-decoration: none;
-    color: #f2ecec;
-    font-weight: bold;
-}
-
-/* Estilos para o dropdown */
-.dropdown {
-    display: none;
-    position: absolute;
-    background-color: #ffffff23;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-}
-
-.nav-item:hover .dropdown {
-    display: block;
-}
-
-.dropdown li {
-    padding: 10px;
-}
-
-/* Estilos para telas menores (móveis) */
-@media screen and (max-width: 768px) {
-    .hamburguer {
-        display: block;
-    }
-
-    .nav-menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px; /* Ajuste conforme necessário */
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        z-index: 1;
-    }
-
-    .nav-menu.active {
-        display: flex;
-    }
-
-    .nav-item {
-        margin: 0;
-        text-align: center;
-    }
-
-    .nav-link {
-        display: block;
-        padding: 15px;
-        border-bottom: 1px solid #ddd;
-    }
-
-    .nav-item:hover .dropdown {
-        display: none; /* Esconde dropdowns no modo mobile */
-    }
-}
+    position: absolute; 
+     width: 100%;
+     top: 0;
+     left: 0;
+     height: 50px;
+ }
+ 
+ 
+ li{
+     list-style: none;
+ }
+ a{
+     color: aliceblue;
+     text-decoration: none;
+ }
+ 
+ /* Estilos para o menu hamburguer */
+ .hamburguer {
+     display: none; /* Oculta o hamburguer em telas maiores */
+     cursor: pointer;
+ }
+ 
+ .bar {
+     display: block;
+     width: 25px;
+     height: 3px;
+     background-color: #333;
+     margin: 5px 0;
+ }
+ 
+ /* Estilos para o menu de navegação */
+ .navbar {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     background-color: rgb(255, 255, 255);
+     padding: 15px;
+     box-shadow: 0 0 10px rgba(214, 205, 205, 0.1);
+     font-weight: bold;
+     font-family:Sang bleu-regular;
+ }
+ 
+ .logo {
+     font-size: 24px;
+     text-decoration: none;
+     color: #333;
+ }
+ 
+ .nav-menu {
+     list-style: none;
+     display: flex;
+     margin: 0;
+     padding: 0;
+ }
+ 
+ .nav-item {
+     margin-right: 20px;
+ }
+ 
+ .nav-link {
+     text-decoration: none;
+     color: #333;
+     font-weight: bold;
+ }
+ 
+ /* Estilos para o dropdown */
+ .dropdown {
+     display: none;
+     position: absolute;
+     background-color: #f9f3f323;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+     z-index: 1;
+ }
+ 
+ .nav-item:hover .dropdown {
+     display: block;
+ }
+ 
+ .dropdown li {
+     padding: 10px;
+ }
+ 
+ /* Estilos para telas menores (móveis) */
+ @media screen and (max-width: 768px) {
+     .hamburguer {
+         display: block;
+     }
+ 
+     .nav-menu {
+         display: none;
+         flex-direction: column;
+         position: absolute;
+         top: 60px; /* Ajuste conforme necessário */
+         left: 0;
+         width: 100%;
+         background-color: #fff;
+         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+         z-index: 1;
+     }
+ 
+     .nav-menu.active {
+         display: flex;
+     }
+ 
+     .nav-item {
+         margin: 0;
+         text-align: center;
+     }
+ 
+     .nav-link {
+         display: block;
+         padding: 15px;
+         border-bottom: 1px solid #ddd;
+     }
+ 
+     .nav-item:hover .dropdown {
+         display: none; /* Esconde dropdowns no modo mobile */
+     }
+ }
 
   .container{
     background-color: #fafafa;
@@ -144,6 +161,7 @@ a{
     width: 100%;
     box-sizing: 0 3px 5px rgba(0,0,0, 0.5);
     overflow: hidden;
+    
   }
   
   .header{
@@ -151,6 +169,7 @@ a{
     padding: 24px;
     text-align: center;
     color: #FFF;
+    
   }
   
   .form{
