--- a/Promoçao/style.css
+++ b/Promoçao/style.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: Sang bleu-light;
     src: url(./Fontes/SangBleu-Sunrise.ttf);
+  }
 
-}
 *{
     padding: 0;
     margin: 0;
@@ -53,7 +53,7 @@ a{
     align-items: center;
     background-color: white;
     padding: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(214, 205, 205, 0.1);
     font-weight: bold;
     font-family: Sang bleu-light;
 }
@@ -179,6 +179,7 @@ h2{
 	justify-content: center;
 	border-radius: 1.2rem;
 	margin: 2rem;
+    font-family: Sang bleu-light;
 }
 
 .product .product-title, .product .product-price{
