--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ html, body{
 }
 
 body{
-    background-color: #3A2D28;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: scroll;
@@ -75,8 +74,7 @@ a{
     height: 3px;
     background-color: #333;
     margin: 5px 0;
-  
-
+    
 }
 
 /* Estilos para o menu de navegação */
@@ -84,12 +82,11 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffffff00;
-    padding: 50px;
+    background-color: #fffffff1;
+    padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     font-weight: bold;
     font-family: Sang bleu-light;
-   
 }
 
 .logo {
@@ -115,11 +112,12 @@ a{
     font-weight: bold;
 }
 
+
 /* Estilos para o dropdown */
 .dropdown {
     display: none;
     position: absolute;
-    background-color: #ffffff23;
+    background-color: #ffffff8a;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
@@ -170,6 +168,11 @@ a{
     }
 }
 
+nav ul li a:hover{
+    color:#475363;
+    border-bottom: 3px solid #12345D;
+}
+
 /* main */
 section {
     display: flex;
@@ -191,7 +194,7 @@ section {
 }
 
 .sec-1 img {
-    width: 30%;
+    width: 20%;
     height: 70%;
 }
 
@@ -290,6 +293,11 @@ section {
     margin-top: -30px;
 }
 
+.left-slide p {
+
+    font-size: 30px;
+} 
+
 .right-slide {
     height: 100%;
     position: absolute;
@@ -355,6 +363,7 @@ button:focus {
     position: relative;
     left: 0;
     transition: .3s;
+    font-size: 30px;
 }
 
 .image-wrapper > * {
@@ -464,6 +473,7 @@ footer {
     font-weight: 400;
     text-transform: capitalize;
     line-height: 3rem;
+    font-size: 30px;
 
 }
 
@@ -471,7 +481,7 @@ footer {
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
-    font-size: 14px;
+    font-size: 20px;
 }
 
 .socials {
