--- a/Login/agendamento.css
+++ b/Login/agendamento.css
@@ -1,241 +1,250 @@
 @font-face {
-  font-family: Sang bleu-regular;
-  src: url(./Fontes/SangBleu-Sunrise.ttf);
-}
-
-@font-face {
   font-family: Sang bleu-light;
-  src: url(./Fontes/SangBleu-Sunrise.ttf);
-}
-
-@import url('https://fonts.googleapis.com/css2? family= Black+Han+Sans & family= M+PLUS+Rounded+1c:wght@100;300;400;500;700; 800;900 & família= Maven+Pro:wght@400;500;600;700;800;900 & família= Poppins & família= Russo+One & família= Ultra & display=swap');
-
-@font-face {
-  font-family: Carrosel-Light;
-  src: url(./Fontes/M_PLUS_Rounded_1c/MPLUSRounded1c-Light.ttf);
+  src: url(../Fontes/SangBleu-Sunrise.ttf);
 }
 
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  body{
-    background-image: url(../img/fundo/pexels-polina-tankilevitch-3736519.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-  
-  header {
-   position: absolute; 
-    width: 100%;
-    top: 0;
-    left: 0;
-    height: 50px;
+
+body {
+    height: 100%;
+    display: grid;
+    place-items: center;
+    font-family: Sang bleu-light;
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  background-image: radial-gradient(at 9.2% 73.7%, #A48374 0px, transparent 50%),
+    radial-gradient(at 92.3% 7.6%, #fff9cf 0px, transparent 50%);
+  background-repeat: no-repeat;
+}
+
+header {
+  width: 100%;
+  height: 100%;
 }
 
 
 li{
-    list-style: none;
+  list-style: none;
 }
 a{
-    color: aliceblue;
-    text-decoration: none;
+  color: aliceblue;
+  text-decoration: none;
 }
 
 /* Estilos para o menu hamburguer */
 .hamburguer {
-    display: none; /* Oculta o hamburguer em telas maiores */
-    cursor: pointer;
+  display: none; /* Oculta o hamburguer em telas maiores */
+  cursor: pointer;
 }
 
 .bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: #333;
-    margin: 5px 0;
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px 0;
+  
 }
 
 /* Estilos para o menu de navegação */
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(255, 255, 255);
-    padding: 15px;
-    box-shadow: 0 0 10px rgba(214, 205, 205, 0.1);
-    font-weight: bold;
-    font-family: Sang bleu-light;;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fffffff1;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-weight: bold;
+  font-family: Sang bleu-light;
 }
 
 .logo {
-    font-size: 24px;
-    text-decoration: none;
-    color: #333;
+  font-size: 24px;
+  text-decoration: none;
+  color: #333;
 }
 
 .nav-menu {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .nav-link {
-    text-decoration: none;
-    color: #333;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
 }
+
 
 /* Estilos para o dropdown */
 .dropdown {
-    display: none;
-    position: absolute;
-    background-color: #f9f3f323;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: #CAC5C9;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .nav-item:hover .dropdown {
-    display: block;
+  display: block;
 }
 
 .dropdown li {
-    padding: 10px;
+  padding: 10px;
 }
 
 /* Estilos para telas menores (móveis) */
 @media screen and (max-width: 768px) {
-    .hamburguer {
-        display: block;
-    }
+  .hamburguer {
+      display: block;
+  }
 
-    .nav-menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px; /* Ajuste conforme necessário */
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        z-index: 1;
-    }
+  .nav-menu {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 60px; /* Ajuste conforme necessário */
+      left: 0;
+      width: 100%;
+      background-color: #fff;
+      box-shadow: 0 2px 5px rgba(41, 13, 13, 0.766);
+      z-index: 1;
+  }
 
-    .nav-menu.active {
-        display: flex;
-    }
+  .nav-menu.active {
+      display: flex;
+  }
 
-    .nav-item {
-        margin: 0;
-        text-align: center;
-    }
+  .nav-item {
+      margin: 0;
+      text-align: center;
+  }
 
-    .nav-link {
-        display: block;
-        padding: 15px;
-        border-bottom: 1px solid #ddd;
-    }
+  .nav-link {
+      display: block;
+      padding: 15px;
+      border-bottom: 1px solid #ddd;
+  }
 
-    .nav-item:hover .dropdown {
-        display: none; /* Esconde dropdowns no modo mobile */
-    }
+  .nav-item:hover .dropdown {
+      display: none; /* Esconde dropdowns no modo mobile */
+  }
 }
-
-
-
-h2{
-    font-family: 'Sang bleu-regular';
-    font-weight: 400;
-    font-size: 15px;
-    color: #ececec;
-}
-
 
 nav ul li a:hover{
-    color:#475363;
-    border-bottom: 3px solid #12345D;
+  color:#475363;
+  border-bottom: 3px solid #12345D;
 }
 
-  .container{
-    background-color: #fafafa;
-    border-radius: 14px;
-    margin: 14px;
-    max-width: 600px;
-    width: 100%;
-    box-sizing: 0 3px 5px rgba(0,0,0, 0.5);
-    overflow: hidden;
-  }
+.container h1 {
+  font-size: 30px;
+  align-items: center;
+  font-family: Sang bleu-light;
   
-  .header{
-    background-image: url(../img/fundo/pexels-polina-tankilevitch-3736281.jpg);
-    padding: 24px;
-    text-align: center;
-    color: #FFF;
-  }
-  
-  .form{
-    padding: 18px;
-  }
-  
-  .form-content{
-    margin-bottom: 8px;
-    padding-bottom: 18px;
-    position: relative;
-  }
-  
-  .form-content label{
-    display: inline-block;
-    margin-bottom: 4px;
-  }
-  
-  .form-content input{
+}
+
+
+.container {
+  width: 100%;
+    max-width: 540px;
+    background: #d5cbb9;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+
+form {
+  width: 100%;
+  max-width: 30rem;
+}
+
+label,
+  input,
+  textarea,
+  button, 
+  select {
     display: block;
+  }
+
+  input,
+  textarea,
+  button,
+  select {
     width: 100%;
-    border-radius: 8px;
-    padding: 8px;
-    border: 2px solid #dfdfdf;
+    font: inherit;
+    padding: 1.25rem;
+    font-weight: 700;
   }
-  
-  .form-content a{
-    position: absolute;
-    bottom: -8px;
-    left: 0;
-    visibility: hidden;
+
+  select {
+    width: auto;
   }
-  
-  .form button{
-    background-color: darkgrey;
-    color: #FFF;
-    width: 100%;
-    border-radius: 14px;
-    padding: 10px;
-    border: 0;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 14px;
+
+  input,
+  textarea, 
+  select {
+    margin-bottom: 1rem;
+    color: black;
+    background: whitesmoke;
+    border: 0.125rem solid transparent;
+    border-radius: 1.125rem;
+    transition: border-color 0.3s, box-shadow 0.3s;
   }
-  
-  .form-content.error input{
-    border-color: #ff3b25;
+
+  input:hover,
+  input:focus,
+  textarea:hover,
+  textarea:focus,
+  select:hover {
+    outline: none;
+    border-color: #CBAD8D;
+    box-shadow: 0 0 0 0.3125rem #CBAD8D;
   }
-  
-  .form-content.error a{
-    color: #ff3b25;
-    visibility: visible;
-  }
+
+    
+    button {
+      border: none;
+      border-radius: 99px;
+      color: white;
+      background: #CBAD8D;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    
+    button:hover,
+    button:focus {
+      outline: none;
+      background: #A48374;
+    }
+    
+    button:disabled {
+      cursor: not-allowed;
+      background: #555b69;
+    }
+    
+    .success,
+    .error {
+      text-align: center;
+    }
+    
+    .success {
+      color: greenyellow;
+    }
+    
+    .error {
+      color: tomato;
+    }
