--- a/Promoçao/style.css
+++ b/Promoçao/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Sang bleu-light;
-    src: url(./Fontes/SangBleu-Sunrise.ttf);
+    src: url(../Fontes/SangBleu-Sunrise.ttf);
   }
 
 *{
@@ -10,8 +10,14 @@
 }
 
 body{
-    background-image: url(../img/fundo/pexels-polina-tankilevitch-3736519.jpg);
-    background-repeat: no-repeat;
+  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  background-image: radial-gradient(at 9.2% 73.7%, #A48374 0px, transparent 50%),
+    radial-gradient(at 92.3% 7.6%, #fff9cf 0px, transparent 50%);
+  background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
@@ -85,7 +91,7 @@ a{
 .dropdown {
     display: none;
     position: absolute;
-    background-color: #f9f3f323;
+    background-color: #CAC5C9;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
@@ -139,10 +145,11 @@ a{
 
 
 h2{
-    font-family: 'Sang bleu-regular';
+    font-family: Sang bleu-light;
     font-weight: 400;
     font-size: 15px;
-    color: #ececec;
+    color: black;
+    padding-top: 20px;
 }
 
 
@@ -167,11 +174,11 @@ h2{
 
 .product{
 	overflow: hidden;
-	background: #ffffff;
+	background: #d5cbb9;
 	color: #21201e;
 	text-align: center;
-	width: 240px;
-	height: 400px;
+	width: 300px;
+	height: 450px;
 	padding: 2rem;
 	display: flex;
 	flex-direction: column;
@@ -195,7 +202,7 @@ h2{
 }
 
 .product img {
-	height: 200px;
+	height: 250px;
 	margin: 1rem;
 	transition: all 0.3s;
 }
@@ -204,7 +211,7 @@ h2{
 	color: #ececec;
 	display: inline-block;
 	text-decoration: none;
-	background-color: #2c3e50;
+	background-color: #A48374;
 	padding: 1.2rem 3rem;
 	border-radius: 1rem;
 	margin-top: 1rem;
